# Protei

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
config/: config.json  config_test_1.json  config_test_2.json  json_schema.json
obj_config/: CMakeLists.txt
obj_config/obj_config/: obj_config.cpp  obj_config.hpp
packet_reader/: CMakeLists.txt
packet_reader/packet_reader/: packet_reader.cpp  packet_reader.hpp  test.cpp
packets_pcap_test/: call_flow_04.pcap
parser/parser/: CMakeLists.txt
parser/parser/config/: config.cpp  config.hpp  test.cpp
parser/parser/packet_reader/: packet_reader.cpp  packet_reader.hpp  test.cpp
parser/parser/sip_parser/: sip_parser.cpp  sip_parser.hpp  test.cpp
project/: CMakeLists.txt  call_flow_01.pcap
project/project/: main.cpp
sip_parser/: CMakeLists.txt
sip_parser/sip_parser/: sip_parser.cpp  sip_parser.hpp  test.cpp
